# mfbml

./: .flake8  .gitignore  README.md  requirements.txt  setup.cfg  setup.py
docs/source/: api.rst  conf.py  get_started.rst  index.rst  readme.rst
examples/: test_hk_kriging.py  test_idea.py
examples/conception/: idea_illustration.ipynb  noisy_illustration.ipynb  noisy_illustration_unkown_std.ipynb  test_hk_kriging.py  test_idea.py
examples/correlations/: correlation_calculate.ipynb
examples/mfdnnbnn/: idea_mfdnnbnn.ipynb  main.py
examples/mfrbfgpr_test/: mfrbfgpr_main.py  mfrbfkriging_main.py
examples/noise_case/: idea_conception.py
examples/rbf_regressor_performance/: noise_main.py  noiseless_main.py
examples/studies/: correlation_calculate.ipynb  hk_test.py  kriging_test.py  mf_rbf_kriging_main.py  proposed.py  smt_single_fidelity.py
examples/test_mfrbfgpr/: comparison.csv  different_low_fidelity_influence.ipynb  different_noise_influence.csv  gpr_main.py  landscape_of_nll.ipynb  main.py
mfbml/: __init__.py
mfbml/methods/: bnn.py  (+8 more)
rbfgp/: __init__.py  mfrbfgp.py  mfrbfkriging.py
tutorial/: kernel_ridge_regression.ipynb  krr_lr_gpr_illustration.ipynb  mf_rbf_kriging_illustration.ipynb  result_of_illustrative_example.csv
tutorials/: Gaussian_Noise.ipynb  bayesian_neural_network_demo.ipynb  deep_neural_network_demo.ipynb  dnn_bnn_demo.ipynb  dnn_lr_bnn_demo.ipynb  kernel_ridge_regression.ipynb  kernel_ridge_regression_demo.ipynb  krr_lr_gpr_demo.ipynb  krr_lr_gpr_illustration.ipynb  krr_lr_gpr_illustration_demo.ipynb  mf_dnn_bnn_showcase.ipynb
(+866 files in other folders)
