[metadata]
name = mfbml
version = file: VERSION
author = Jiaxiang Yi
author_email = J.Yi@tudelft.nl
description = mfbml: general framework for multi-fidelity Bayesian machine learning
long_description = file: README.md
long_description_content_type = text/markdown
keywords = Bayesian machine learning, Multi-fidelity
url = https://github.com/JiaxiangYi96/mfbml.git
license = MIT License
license_files = file: LICENSE
classifiers =
  Development Status :: 5 - Production/Stable
  Intended Audience :: Science/Research
  Topic :: Scientific/Engineering
  Topic :: Scientific/Engineering :: Artificial Intelligence
  Topic :: Scientific/Engineering :: Physics
  License :: OSI Approved :: BSD License
  Natural Language :: English
  Programming Language :: Python :: 3

[options]
package_dir=
  =src
packages=find:
include_package_data = True
python_requires = >=3.10
; install_requires = file: requirements.txt


[options.packages.find]
where=src